# CrossPlatformGUI_Template

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Mesh.h  Shader.h  Texture.h  Window.h
